[package]
name = "tokio-iecp5"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bit-struct = "0.3.2"
byteorder = "1.5.0"
bytes = "1.6.0"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = { version = "0.7.11", features = ["codec"] }
log = "0.4.20"
env_logger = "0.11.3"

[[example]]
name = "client"
path = "example/client.rs"

[[example]]
name = "server"
path = "example/server.rs"
